# clingo-fast-api

./: .gitignore  README.md  main.py  pyproject.toml
clingo_fast_api/: __main__.py  app.py  converter.py
lib/: converter.py
