[tool.poetry]
name = "clingo-fast-api"
version = "0.1.0"
description = ""
authors = ["ryuk4real <84407165+ryuk4real@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
clingo = "^5.6.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
